# ray-tracer

./: Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  all_examples.rs  chapter_10.rs  chapter_11.rs  chapter_12.rs  chapter_13.rs  chapter_14.rs  chapter_15.rs  chapter_16.rs  chapter_2.rs  chapter_5.rs  chapter_6.rs  chapter_7.rs  chapter_8.rs  chapter_9.rs  lib.rs
output/: chapter_10.ppm  chapter_11.ppm  chapter_12.ppm  chapter_13.ppm  chapter_14.ppm  chapter_15.ppm  chapter_16.ppm  chapter_2.ppm  chapter_5.ppm  chapter_6.ppm  chapter_7.ppm  chapter_8.ppm  chapter_9.ppm
ray-tracer/: Cargo.toml
src/: camera.rs  canvas.rs  color.rs  cone.rs  cube.rs  cylinder.rs  examples.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  matrix2.rs  matrix3.rs  matrix4.rs  misc.rs  obj.rs  pattern.rs  plane.rs  ray.rs  shape.rs  sphere.rs  transformations.rs  triangle.rs  tuple.rs  world.rs
src/examples/: chapter_11.rs  chapter_12.rs  chapter_13.rs  chapter_14.rs  chapter_15.rs
src/math/: matrix3.rs  matrix4.rs  mod.rs  transformations.rs  tuple.rs
src/shape/: cone.rs  csg.rs  cube.rs  cylinder.rs  plane.rs  sphere.rs  triangle.rs
